Fixed text blurriness on hover animation effect for work component section

--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -31,6 +31,8 @@
             box-sizing: border-box;
             background-image: linear-gradient(to bottom right, transparent 50%, #FFF 50%);
             background-size: 200% 200%;
+            backface-visibility: hidden;
+            transform: translateZ(0);
             background-repeat: no-repeat;
             word-break: break-word;
             transition: background-position 0.2s, transform 0.2s, opacity 0.6s ease-out;
